--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,14 +10,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@phdulac/react-native-circular-slider": "^1.0.4",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-community/slider": "4.5.6",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-circular-progress": "^1.4.1",
+    "react-native-circular-slider": "^1.0.1",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-picker-select": "^9.3.1"
+    "react-native-picker-select": "^9.3.1",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
