--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,7 +21,8 @@
     "react-native-circular-slider": "^1.0.1",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-picker-select": "^9.3.1",
-    "react-native-svg": "15.11.2"
+    "react-native-svg": "15.11.2",
+    "react-native-toast-message": "^2.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
