--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,17 +11,20 @@
   },
   "dependencies": {
     "@phdulac/react-native-circular-slider": "^1.0.4",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-community/slider": "4.5.6",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "expo": "~53.0.20",
+    "expo-checkbox": "~4.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-circular-progress": "^1.4.1",
     "react-native-circular-slider": "^1.0.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-picker-select": "^9.3.1",
@@ -30,8 +33,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.3",
-    "react-native-vector-icons": "^10.3.0",
-    "expo-checkbox": "~4.1.4"
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
